ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.2, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0, v5.0
    • Security 2022-09-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      kerberos_tool.js

      [js_test:kerberos_tool] sh15124| [FAIL] GSSAPI client handshake failed
      [js_test:kerberos_tool] sh15124| 	* Major code 851968; Unspecified GSS failure.  Minor code may provide more information; Minor code 2529639066; Cannot find KDC for realm "EC2.INTERNAL";
      [js_test:kerberos_tool] sh15124|
      

      ldap_authz_authn.js

      [js_test:ldap_authz_authn] d20084| [14904] 1660682299.563102: Retrieving mockservice/localhost.ec2.internal@LDAPTEST.10GEN.CC from FILE:jstests/libs/mockservice.keytab (vno 0, enctype 0) with result: -1765328203/No key table entry found for mockservice/localhost.ec2.internal@LDAPTEST.10GEN.CC
      [js_test:ldap_authz_authn] d20084| [14904] 1660682299.563106: Retrieving mockservice/localhost.ec2.internal@LDAPTEST.10GEN.CC from FILE:jstests/libs/mockservice.keytab (vno 0, enctype 0) with result: -1765328203/No key table entry found for mockservice/localhost.ec2.internal@LDAPTEST.10GEN.CC
      [js_test:ldap_authz_authn] d20084| 2022-08-16T20:38:19.563+00:00 F  ASSERT   23095   [main] "Fatal assertion","attr":{"msgid":50743,"error":"UnknownError: gssapi could not acquire server credential for mockservice/localhost.ec2.internal@; Major code 458752; No credentials were supplied, or the credentials were unavailable or inaccessible; Minor code 39756033; No key table entry found for mockservice/localhost.ec2.internal@LDAPTEST.10GEN.CC; ","file":"src/mongo/db/modules/enterprise/src/sasl/cyrus_sasl_authentication_session.cpp","line":337}
      [js_test:ldap_authz_authn] d20084| 2022-08-16T20:38:19.563+00:00 F  ASSERT   23096   [main] "\n\n***aborting after fassert() failure\n\n"
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: