SERVER-68951 Fix kerberos_tool.js and ldap_authz_authn.js on Ubuntu 22.04

GitOrigin-RevId: 88f855c802743fb42fa1b76266f8de7fa3fa49a5